--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-seaborn>=0.13.0
+streamlit==1.28.1
+pandas==2.1.3
+matplotlib==3.8.2
+seaborn==0.13.0
+scikit-learn==1.3.2
+numpy==1.26.2
